--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,17 @@ android {
 
 dependencies {
 
-    implementation 'com.google.firebase:firebase-inappmessaging-display:20.2.0'
-    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.3.2'
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-analytics:21.2.2'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:20.3.2'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.google.firebase:firebase-installations:17.1.3'
+    implementation 'com.google.firebase:firebase-perf:20.3.2'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+
+
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
