Huge restructure to get chat and time edit working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
 android {
     namespace 'com.capstone481p.snoozeyoulose'
     compileSdk 33
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.capstone481p.snoozeyoulose"
@@ -13,20 +14,27 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        dev {
+            minifyEnabled false
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
     buildFeatures {
         viewBinding true
     }
@@ -43,7 +51,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:20.3.2'
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation 'com.google.firebase:firebase-storage:20.2.0'
 
 
     constraints {
@@ -55,6 +64,7 @@ dependencies {
         }
     }
 
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
